# frontend/web/swagger-docs/swagger.json
@@ -118,7 +118,7 @@
                     "200": {
                         "description": "\u83b7\u53d6\u6210\u529f",
                         "schema": {
-                            "$ref": "#/definitions/bossResult"
+                            "$ref": "#/definitions/battle"
                         }
                     },
                     "404": {
@@ -166,7 +166,104 @@
                     "201": {
                         "description": "\u6311\u6218\u6210\u529f",
                         "schema": {
-                            "$ref": "#/definitions/opponents"
+                            "$ref": "#/definitions/battleResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "\u6570\u636e\u9a8c\u8bc1\u5931\u8d25"
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            }
+        },
+        "/v1/battles/{battle_id}": {
+            "get": {
+                "tags": [
+                    "\u597d\u53cb\u5bf9\u6218"
+                ],
+                "summary": "\u83b7\u53d6\u5bf9\u6218\u9898\u76ee",
+                "description": "\u83b7\u53d6\u5bf9\u6218\u9898\u76ee",
+                "operationId": "getInventory",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "battle_id",
+                        "in": "path",
+                        "description": "\u6311\u6218\u7684 id",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "access-token",
+                        "in": "query",
+                        "description": "\u8eab\u4efd\u4ee4\u724c",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "\u6311\u6218\u6210\u529f",
+                        "schema": {
+                            "$ref": "#/definitions/battleResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "\u6570\u636e\u9a8c\u8bc1\u5931\u8d25"
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "\u597d\u53cb\u5bf9\u6218"
+                ],
+                "summary": "\u5bf9\u6218\u7b54\u9898\u63d0\u4ea4",
+                "description": "\u5bf9\u6218\u7b54\u9898\u63d0\u4ea4",
+                "operationId": "getInventory",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "battle_id",
+                        "in": "path",
+                        "description": "\u6311\u6218\u7684 id",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "\u7528\u6237\u7b54\u9898\u7ed3\u679c",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/answerSubmitFormatWithTime"
+                        }
+                    },
+                    {
+                        "name": "access-token",
+                        "in": "query",
+                        "description": "\u8eab\u4efd\u4ee4\u724c",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "\u6311\u6218\u6210\u529f",
+                        "schema": {
+                            "$ref": "#/definitions/battleResult"
                         }
                     },
                     "422": {
@@ -605,6 +702,98 @@
                 ]
             }
         },
+        "/v1/msgs": {
+            "get": {
+                "tags": [
+                    "\u6d88\u606f\u7ba1\u7406"
+                ],
+                "summary": "\u6d88\u606f\u5217\u8868",
+                "description": "\u6d88\u606f\u5217\u8868",
+                "operationId": "getInventory",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "\u7b2c\u51e0\u9875",
+                        "required": false,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "per-page",
+                        "in": "query",
+                        "description": "\u6bcf\u9875\u6570\u91cf",
+                        "required": false,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "access-token",
+                        "in": "query",
+                        "description": "\u8eab\u4efd\u4ee4\u724c",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u9053\u5177\u5217\u8868\u83b7\u53d6\u6210\u529f",
+                        "schema": {
+                            "$ref": "#/definitions/msgResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "\u8d26\u53f7\u5bc6\u7801\u9519\u8bef"
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            }
+        },
+        "/v1/msg/status": {
+            "get": {
+                "tags": [
+                    "\u6d88\u606f\u7ba1\u7406"
+                ],
+                "summary": "\u662f\u5426\u6709\u65b0\u6d88\u606f",
+                "description": "\u67e5\u770b\u7528\u6237\u662f\u5426\u6709\u65b0\u6d88\u606f",
+                "operationId": "getInventory",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "access-token",
+                        "in": "query",
+                        "description": "\u8eab\u4efd\u4ee4\u724c",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "true\u4e3a\u6709\u65b0\u6d88\u606f\u3002false\u4e3a\u6ca1\u6709\u65b0\u6d88\u606f\uff0c\u6d88\u606f\u72b6\u6001\u67e5\u8be2\u6210\u529f",
+                        "schema": {
+                            "property": "id",
+                            "type": "boolean",
+                            "format": "int64"
+                        }
+                    },
+                    "400": {
+                        "description": "\u8d26\u53f7\u5bc6\u7801\u9519\u8bef"
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            }
+        },
         "/v1/pieces/{id}": {
             "put": {
                 "tags": [
@@ -872,6 +1061,22 @@
                 "name": "QuestionOptions"
             }
         },
+        "_msg": {
+            "properties": {
+                "battle_id": {
+                    "description": "battle_id \u5bf9\u6218\u7684id,\u7528\u4e8e\u7528\u6237\u5e94\u6218\u65f6\u5019\u7528\u5230",
+                    "type": "integer"
+                },
+                "detail": {
+                    "description": "\u6d88\u606f\u5185\u5bb9",
+                    "type": "string"
+                }
+            },
+            "type": "object",
+            "xml": {
+                "name": "_msg"
+            }
+        },
         "answerSubmitFormat": {
             "properties": {
                 "id": {
@@ -887,6 +1092,105 @@
             "type": "object",
             "xml": {
                 "name": "answerSubmitFormat"
+            }
+        },
+        "answerSubmitFormatWithTime": {
+            "properties": {
+                "options": {
+                    "description": "\u9009\u9879",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/answerSubmitFormat"
+                    }
+                },
+                "cost_time": {
+                    "description": "\u7b54\u9898\u82b1\u8d39\u7684\u65f6\u95f4\uff0c\u5355\u4f4d\u79d2",
+                    "example": "100"
+                }
+            },
+            "type": "object",
+            "xml": {
+                "name": "answerSubmitFormatWithTime"
+            }
+        },
+        "battle": {
+            "properties": {
+                "items": {
+                    "description": "\u7528\u6237\u5217\u8868",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/user"
+                    }
+                },
+                "_meta": {
+                    "description": "\u76f8\u5173\u4fe1\u606f",
+                    "$ref": "#/definitions/ListInfo"
+                }
+            },
+            "type": "object",
+            "xml": {
+                "name": "battle"
+            }
+        },
+        "battleResponse": {
+            "properties": {
+                "id": {
+                    "description": "battle_id,\u5bf9\u6218\u7f16\u53f7",
+                    "type": "string",
+                    "example": "1"
+                },
+                "questions": {
+                    "description": "\u9898\u76ee\u5217\u8868",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Questions"
+                    },
+                    "example": "100"
+                }
+            },
+            "type": "object",
+            "xml": {
+                "name": "battleResponse"
+            }
+        },
+        "battleResult": {
+            "properties": {
+                "code": {
+                    "description": "\u7b54\u9898\u60c5\u51b5\uff0c\u72b6\u6001\u7801\u7684\u503c  0\u5bf9\u6218\u4fe1\u606f\u4e0d\u5b58\u5728\uff0c1\u4e3a\u5bf9\u6218\u7ed3\u675f\u51fa\u7ed3\u679c\u4e86\uff0c2\u4e3a\u4f60\u5df2\u5b8c\u6210\u5bf9\u6218\uff0c\u5bf9\u624b\u8fd8\u672a\u5b8c\u6210",
+                    "type": "integer",
+                    "enum": [
+                        "0",
+                        "1",
+                        "2"
+                    ],
+                    "example": "0"
+                },
+                "message": {
+                    "description": "\u72b6\u6001\u7801\u63cf\u8ff0",
+                    "type": "string",
+                    "example": "\u5168\u90e8\u7b54\u9519"
+                },
+                "total": {
+                    "description": "\u7b54\u9898\u603b\u6570",
+                    "example": "100"
+                },
+                "rightOptionNum": {
+                    "description": "\u7b54\u5bf9\u7684\u9898\u76ee\u6570",
+                    "example": "99"
+                },
+                "status_win": {
+                    "description": "0\u8f93\uff0c1 \u8d62\uff0c2\u5e73\u5c40",
+                    "enum": [
+                        "0",
+                        "1",
+                        "2"
+                    ],
+                    "example": "0"
+                }
+            },
+            "type": "object",
+            "xml": {
+                "name": "battleResult"
             }
         },
         "bossResult": {
@@ -1193,6 +1497,11 @@
                     "type": "string",
                     "example": "\u83dc\u9e1f"
                 },
+                "bossTime": {
+                    "description": "\u4e0b\u4e00\u4e2a\u4e16\u754cboss\u5f00\u59cb\u952e",
+                    "type": "string",
+                    "example": "2018-03-23 17:41:27"
+                },
                 "chapterDone": {
                     "description": "\u5df2\u5b8c\u6210\u7684\u5173\u5361\u6570",
                     "type": "integer",
@@ -1293,6 +1602,25 @@
             "type": "object",
             "xml": {
                 "name": "mapsList"
+            }
+        },
+        "msgResponse": {
+            "properties": {
+                "items": {
+                    "description": "\u6d88\u606f\u5217\u8868",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/_msg"
+                    }
+                },
+                "_meta": {
+                    "description": "\u76f8\u5173\u4fe1\u606f",
+                    "$ref": "#/definitions/ListInfo"
+                }
+            },
+            "type": "object",
+            "xml": {
+                "name": "msgResponse"
             }
         },
         "opponents": {
@@ -1576,7 +1904,7 @@
         "responseQuestion": {
             "properties": {
                 "code": {
-                    "description": "\u7b54\u9898\u60c5\u51b5\uff0c0\u4e3a\u9a8c\u8bc1\u5931\u8d25\uff0c1\u4e3a\u5168\u90e8\u7b54\u5bf9\uff0c2\u4f4d\u90e8\u5206\u7b54\u5bf9",
+                    "description": "\u7b54\u9898\u60c5\u51b5\uff0c0\u4e3a\u9a8c\u8bc1\u5931\u8d25\uff0c1\u95ef\u5173\u6210\u529f",
                     "type": "integer",
                     "enum": [
                         "0",
